objects/kugo2p__SalesQuote__c.object
<CustomObject>
    <description>Kugamon - Main object for Quote details. Contains key data points such as Account Name, Opportunity Name, and Expiration Date.</description>
    <fields>
        <fullName>kuga_sub__ContractEndDate__c</fullName>
        <description>References the End Date field on the related Contract record.</description>
        <formula>kuga_sub__ContractNumber__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contract Number.

Required for Expansion and Renewal Quotes.</description>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account is required. To change the Account, please update the Additional Account Info field on this Quote. If the field is not visible, please contact your Administrator.</description>
        <inlineHelpText>Account is required. To change the Account, please update the Additional Account Info field on this Quote. If the field is not visible, please contact your Administrator</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalAccountDetail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Additional Account Detail</label>
        <referenceTo>kugo2p__AdditionalAccountDetail__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditAmount__c</fullName>
        <label>Additional Charge/Credit Amount</label>
        <summarizedField>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__AdditionalChargeCreditAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditDateRequired__c</fullName>
        <label>Additional Charge/Credit Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditTaxAmount__c</fullName>
        <label>Additional Charge/Credit Tax Amount</label>
        <summarizedField>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__TaxAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditVATAmount__c</fullName>
        <label>Additional Charge/Credit VAT/GST Amount</label>
        <summarizedField>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__VATAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteAdditionalChargeCredit__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCity__c</fullName>
        <label>Bill To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCountry__c</fullName>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStateProvince__c</fullName>
        <label>Bill To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStreetLong__c</fullName>
        <description>A longer version of the original Bill To Street__c field.</description>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToZipPostalCode__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingFrequency__c</fullName>
        <formula>kugo2p__AdditionalAccountDetail__r.kugo2p__BillingFrequency__c</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingMethod__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CloseReason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Re-Quote</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBilling__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Contact Billing)</relationshipLabel>
        <relationshipName>SalesQuote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBuying__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Buying</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactShipping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SalesQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPODate__c</fullName>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPONumber__c</fullName>
        <label>Customer PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateAvailableToPromise__c</fullName>
        <formula>IF(
ISBLANK(kugo2p__ProductDateAvailableToPromise__c) &amp;&amp; ISBLANK(kugo2p__ServiceDateAvailableToPromise__c),

kugo2p__DateRequired__c,

IF(
OR(
kugo2p__ProductDateAvailableToPromise__c &gt; kugo2p__ServiceDateAvailableToPromise__c,
TEXT(kugo2p__ServiceDateAvailableToPromise__c)=&quot;&quot;
),
kugo2p__ProductDateAvailableToPromise__c,
kugo2p__ServiceDateAvailableToPromise__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Available to Promise</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateClosed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateOfferValidThrough__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateRequired__c</fullName>
        <formula>IF( 
OR( 
       kugo2p__ProductDateRequired__c &lt;= kugo2p__ServiceDateRequired__c, 
       AND(TEXT(kugo2p__ServiceDateRequired__c)=&quot;&quot;, TEXT(kugo2p__ProductDateRequired__c)&lt;&gt;&quot;&quot;) 
), 
kugo2p__ProductDateRequired__c, 
IF(OR(
    AND(TEXT(kugo2p__ProductDateRequired__c)=&quot;&quot;, TEXT(kugo2p__ServiceDateRequired__c)&lt;&gt;&quot;&quot;),
    kugo2p__ServiceDateRequired__c &lt;= kugo2p__ProductDateRequired__c), 
kugo2p__ServiceDateRequired__c, 
kugo2p__AdditionalChargeCreditDateRequired__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateSent__c</fullName>
        <description>Initial Quote Date Sent via Email PDF function</description>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DeliveryTerms__c</fullName>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FOB Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only 1 Primary Quote is allowed for the assigned Opportunity.</description>
        <inlineHelpText>Only 1 Primary Quote is allowed for the assigned Opportunity</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Manual Email and Order Generation Functions are Disabled. Quote Template displays Restricted message.</description>
        <inlineHelpText>If checked, Manual Email and Order Generation Functions are Disabled. Quote Template displays Restricted message</inlineHelpText>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__ProductandServiceSubtotalAmount__c  + kugo2p__AdditionalChargeCreditAmount__c - kugo2p__TotalDiscountAmount__c + kugo2p__TotalTaxAmount__c +  kugo2p__TotalVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderMethod__c</fullName>
        <description>Sets Order Generation Behavior. 

If Blank or Per Quote, one Order is Generated from the Quote.

If Per Line Group, one Order is Generated Per Quote Line Group.  Quote Lines without Line Group will be grouped in a Separate Order. Additional Charges/Credits are not supported.</description>
        <inlineHelpText>If Blank or Per Quote, one Order is Generated from the Quote.

If Per Line Group, one Order is Generated Per Quote Line Group.  Quote Lines without Line Group will be grouped in a Separate Order. Additional Charges/Credits are not supported.</inlineHelpText>
        <label>Order Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Quote</fullName>
                    <default>true</default>
                    <label>Per Quote</label>
                </value>
                <value>
                    <fullName>Per Line Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookName__c</fullName>
        <description>Price Book associated with this Quote. Only Products from the Price Book can be added to this Quote. Please use [Choose Price Book] button to change the Price Book. This field is replaced by the Price Book lookup field.</description>
        <label>Price Book Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book associated with this Quote. Only Products from the Price Book can be added to this Quote. Please use [Choose Price Book] button to change the Price Book.</description>
        <inlineHelpText>Price Book associated with this Quote. Only Products from the Price Book can be added to this Quote. Please use [Choose Price Book] button to change the Price Book.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintSpecificTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Specific Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductAmount__c</fullName>
        <label>Product Amount</label>
        <summarizedField>kugo2p__SalesQuoteProductLine__c.kugo2p__ProductAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteProductLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDateAvailableToPromise__c</fullName>
        <inlineHelpText>The latest date available to promise for all product lines.</inlineHelpText>
        <label>Product Date Available to Promise</label>
        <summarizedField>kugo2p__SalesQuoteProductLine__c.kugo2p__DateAvailableToPromise__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteProductLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDateRequired__c</fullName>
        <label>Product Date Required</label>
        <summarizedField>kugo2p__SalesQuoteProductLine__c.kugo2p__DateRequired__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteProductLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductTaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductTotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c - kugo2p__ProductDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductVATAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductandServiceSubtotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product and Service Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuoteName__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificateExpires__c</fullName>
        <label>Resale Certificate Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificate__c</fullName>
        <label>Resale Certificate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesRegion__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SalesTerritory__c</fullName>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceAmount__c</fullName>
        <label>Service Amount</label>
        <summarizedField>kugo2p__SalesQuoteServiceLine__c.kugo2p__ServiceAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteServiceLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDateAvailableToPromise__c</fullName>
        <label>Service Date Available to Promise</label>
        <summarizedField>kugo2p__SalesQuoteServiceLine__c.kugo2p__DateServiceStart__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteServiceLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDateRequired__c</fullName>
        <label>Service Date Required</label>
        <summarizedField>kugo2p__SalesQuoteServiceLine__c.kugo2p__DateServiceStart__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesQuoteServiceLine__c.kugo2p__SalesQuote__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTotalAmount__c</fullName>
        <formula>round(kugo2p__ServiceAmount__c - kugo2p__ServiceDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceVATAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCity__c</fullName>
        <label>Ship To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStateProvince__c</fullName>
        <label>Ship To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStreetLong__c</fullName>
        <description>A longer version of the original ShipToStreet__c field.</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToZipPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SpecificTextandTerms__c</fullName>
        <label>Specific Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>IF(
  kugo2p__RecordStatus__c = &apos;Draft&apos;,
  kugo2p__RecordStatus__c &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Sent&amp;qId=&apos; &amp; Id, &apos;Submit&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Won&amp;qId=&apos; &amp; Id, &apos;Won&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Lost&amp;qId=&apos; &amp; Id, &apos;Lost&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Cancelled&amp;qId=&apos; &amp; Id, &apos;Cancel&apos;, &apos;_self&apos;) &amp; &apos;] &apos;,
  IF(
    kugo2p__RecordStatus__c = &apos;Sent&apos;,
    kugo2p__RecordStatus__c &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Won&amp;qId=&apos; &amp; Id, &apos;Won&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Lost&amp;qId=&apos; &amp; Id, &apos;Lost&apos;, &apos;_self&apos;) &amp; &apos;] &apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateQuoteStatus&amp;status=Cancelled&amp;qId=&apos; &amp; Id, &apos;Cancel&apos;, &apos;_self&apos;) &amp; &apos;] &apos;,
    IF(
      kugo2p__RecordStatus__c = &apos;Won&apos;,
      &apos;Closed/Won&apos; &amp; &apos; [&apos; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=createSalesOrder&amp;qId=&apos; &amp; Id, &apos;Generate Order&apos;, &apos;_self&apos;) &amp; &apos;] &apos;,
      IF(
        kugo2p__RecordStatus__c = &apos;Lost&apos;,
        &apos;Closed/Lost&apos;,
        IF(
          kugo2p__RecordStatus__c = &apos;Cancelled&apos;,
          &apos;Closed/Cancelled&apos;,
          &apos;&apos;
        )
      )
    )
  )
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SubtotalAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditAmount__c + kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c - kugo2p__TotalDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalDiscountAmount__c</fullName>
        <formula>round(kugo2p__ProductDiscountAmount__c + kugo2p__ServiceDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalTaxAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditTaxAmount__c + kugo2p__ServiceTaxAmount__c+ kugo2p__ProductTaxAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalVATAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditVATAmount__c  + kugo2p__ServiceVATAmount__c + kugo2p__ProductVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRegistration__c</fullName>
        <label>VAT Registration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>kugo2p__AllQuotes</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__QuoteName__c</columns>
        <columns>kugo2p__IsPrimary__c</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__Opportunity__c</columns>
        <columns>kugo2p__DateRequired__c</columns>
        <columns>kugo2p__NetAmount__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{YYMMDD}-{0000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>kuga_sub__Expansion</fullName>
        <active>true</active>
        <description>An Expansion Quote adds to a Contract.</description>
        <label>Expansion</label>
    </recordTypes>
    <recordTypes>
        <fullName>kuga_sub__New</fullName>
        <active>true</active>
        <description>A New Quote leads to the creation of a Contract.</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>kuga_sub__Renewal</fullName>
        <active>true</active>
        <description>A Renewal Quote extends or replaces a Contract.</description>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>kuga_sub__RenewalOrderMethodCheck</fullName>
        <active>true</active>
        <description>Kugamon - Per Line Group Order Method not allowed for Renewal Quotes</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Renewal&apos;,
TEXT(kugo2p__OrderMethod__c) = &apos;Per Line Group&apos;
)</errorConditionFormula>
        <errorMessage>Order Method &apos;Per Line Group&apos; is not allowed for Renewal Quotes</errorMessage>
    </validationRules>
</CustomObject>